feat: Initial Boilerplate Setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smooth-moves",
+  "name": "react-tailwind-boilerplate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
